src/objects/Marketing_Material__c.object
<CustomObject>
    <fields>
        <fullName>Codeline_No__c</fullName>
        <label>Codeline No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contents__c</fullName>
        <label>Contents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Id__c</fullName>
        <label>Document Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail_Id__c</fullName>
        <description>This will store the Thumbnail id for the PoP material</description>
        <label>Thumbnail Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>PoP-Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP-Leaflet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP-CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP-Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP-Catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP-Z cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP-Dangler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP-Collaterals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Marketing Material</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Marketing Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Material</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>